AJ-448 first pass at adding swagger codegen